<resources>
    <string name="app_name">GLM</string>
    <string name="completed">Completed</string>
    <string name="reminder_name_hint">Enter a name for the reminder</string>
    <string name="reminder_type_hint">Enter a type for the reminder</string>
    <string name="reminder_time_label">TIME</string>
    <string name="btn_set_time_hint">Set Time</string>
    <string name="reminder_name_label">NAME</string>
    <string name="reminder_type">Reminder Type</string>
    <string name="reminder_type_label">TYPE</string>
    <string name="reminder_date_label">Date of reminder:</string>
    <string name="btn_set_reminder">Set reminder</string>
    <string name="delete_reminder">Delete Reminder</string>
</resources>